test/expected/shellcheck_nullary_test.out
[CompoundList]
  [CompoundListCondition, None]
    [SimpleCommand "[" "$x" "]"]
  [CompoundListCondition, None]
    [SimpleCommand "[" "-n" "$x" "]"]
[Word
  Unquoted "["
]
[Word
  Variable "x"
]
[Word
  Unquoted "]"
]
[Word
  Unquoted "["
]
[Word
  Unquoted "-n"
]
[Word
  Variable "x"
]
[Word
  Unquoted "]"
]
shit: 2:3: warning: a one-operand test is the nonempty-string test, write it with -n to read clearer.
     2 |  [ "$x" ]
       |    ^~~~ here.
shit: 2:3: error: Unable to expand 'x' because the parameter is not set.
     2 |  [ "$x" ]
       |    ^~~~ here.
